                    Changes made to Pyjamas since 0.5p1
                    -----------------------------------

 * The -d option now sets:
    --debug-wrap
    --source-tracking
    --line-tracking
    --store-source

 * Bugfix for soure tracking/debugging

 * BUGFIX: the --no-print-statements option was not honored in browser
   linker

 * fixed urllib quote TODO: need real implementation of quote

 * removed deprecated pyjs.py from root of pyjs

 * we now do not need to override pyjamas.Window fully anymore, so use
   base implementation, which now does not import gtk anymore. moved
   pyjamas/__pyjamas__ to /__pyjamas__ again.

 * Added beginnings of urllib (quote, urlencode) thanks to Ondrej Certik

 * Fixed speed issue #199!  was related to accidental inclusion of gtk.py,
   which accidentally pulled in browser.py, gobject.py and much more.
   Thank you to dobee and jukart for identifying the source of the problem.

 * fixed Window listener. Added tests for those

 * moved pyjamas.__pyjamas__ to __pyjamas__, this way the translator
   now removes any import from __pyjamas__ this module is not existent
   in javascript, only in python. if there is a requirement to a
   function in __pyjamas__ in javascript, it does not belong there.

 * added flag handling to overrides for translator, see
   translator.txt. it is now possible to override a whole
   module.

 * fixed pyjamas.Window.getClientWidth/Height on IE. removed
   conditionals from __browser__ implementation in those functions.

 * prevent usage of builtin names in pyjslib, this causes javascript
   errors at least in javascript lint. int and float are now int_
   float_ in javascript. for python code nothing should change.

 * re-added the --cache-buster option, which now also works along with
   --multi-file. both options are now enabled in libtest build.

 * fixed a bug in linker which caused js_libs to be duplicated when
   called twice in a process. this only affects tests, not console
   scripts.
